clusters/korriban/apps/loki/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: loki
  namespace: monitoring
spec:
  host: loki.monitoring.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        connectTimeout: 120s # TCP connection timeout
        maxConnections: 100
      http:
        http1MaxPendingRequests: 50
        http2MaxRequests: 100
        maxRequestsPerConnection: 2
        idleTimeout: 300s # Keep connections alive for 5 minutes
