clusters/korriban/apps/loki/istio-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki
  namespace: monitoring
spec:
  hosts:
    - "loki.home.cwbtech.net"
  gateways:
    - istio-system/public-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki.monitoring.svc.cluster.local
            port:
              number: 80
      timeout: 30s
      retries:
        attempts: 3
        perTryTimeout: 10s
